<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testpkg_cmake_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="singh.raj1997@gmail.com">rajendra</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- new for py-->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- new -->
  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_copyright</test_depend><!-- new for py-->
  <test_depend>ament_flake8</test_depend><!-- new for py-->
  <test_depend>ament_pep257</test_depend><!-- new for py-->
  <test_depend>python3-pytest</test_depend><!-- new for py-->
  
  <!-- new -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>

    <build_type>ament_cmake</build_type>

    <!-- new for py-->
    <!-- <build_type>ament_python</build_type> -->

    <!-- don't use it-->
    <!-- <build_type>ament_cmake_python</build_type> -->

  </export>
</package>
