<package format="2">
  <name>moveit_ros_move_group</name>
  <version>1.0.1</version>
  <description>The move_group node for MoveIt</description>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_ros_move_group plugin="${prefix}/default_capabilities_plugin_description.xml"/>
  </export>

</package>
